[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/fonts/chocolate_big.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/others/answer_box.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/base/show_question.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="BgColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.858824, 0.854902, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="rectBgColor2" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 72.0
color = Color( 1, 0.694118, 0.686275, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnswerBox1" parent="." instance=ExtResource( 2 )]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 90.0
margin_right = -12.0
margin_bottom = 10.0

[node name="AnswerBox2" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 23.0
margin_top = 90.0
margin_right = -29.0
margin_bottom = 10.0

[node name="AnswerBox3" parent="." instance=ExtResource( 2 )]
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 30.0
margin_right = -12.0
margin_bottom = -50.0

[node name="AnswerBox4" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = 30.0
margin_right = -29.0
margin_bottom = -50.0

[node name="labInfo2" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Pick an answer:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
